<resources>
    <string name="app_name">PickYourPlaces</string>
    <string name="title_home" >Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="my_favorites">My Favorites</string>
    <string name="home">Home</string>
    <string name="my_properties">My Properties</string>
    <string name="settings">Settings</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="facebook_app_id">129320037601657</string>
    <string name="fb_login_protocol_scheme">fb129320037601657</string>
    <string name="geo_api_key">AIzaSyAYscG-vcf5cHVxx4ZjcaMPvazXfKV1CIM</string>
    <string name="add_property">Add Property</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="change_lang">Change Language</string>
    <string name="change_pwd">Change Password</string>
    <string name="logout">Logout</string>

</resources>
