<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menumyProfile"
        android:icon="@drawable/user"
        android:title="@string/my_profile" />

    <item
        android:id="@+id/menufavorite"
        android:icon="@drawable/favorite"
        android:title="@string/my_favorites" />

    <item
        android:id="@+id/menuhome"
        android:icon="@drawable/home"

        android:title="@string/home" />
    <item
        android:id="@+id/menumyProperty"
        android:icon="@drawable/myproperty"
        android:title="@string/my_properties" />

    <item
        android:id="@+id/menusettings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

</menu>
